--- a/kubenode.yaml
+++ b/kubenode.yaml
@@ -34,23 +34,13 @@ parameters:
     constraints:
       - allowed_values: ["true", "false"]
 
-  docker_volume_size:
-    type: string
-    description: >
-      size of a cinder volume to allocate to docker for container/image
-      storage
-    default: 25
-
   # The following are all generated in the parent template.
   kube_master_ip:
     type: string
     description: IP address of the Kubernetes master server.
-  fixed_network_id:
+  fixed_network:
     type: string
     description: Network from which to allocate fixed addresses.
-  fixed_subnet_id:
-    type: string
-    description: Subnet from which to allocate fixed addresses.
 
 resources:
 
@@ -97,19 +87,12 @@ resources:
             "$KUBE_ALLOW_PRIV": {get_param: kube_allow_priv}
             "$KUBE_MASTER_IP": {get_param: kube_master_ip}
             "$WAIT_HANDLE": {get_resource: node_wait_handle}
-            "$DOCKER_VOLUME": {get_resource: docker_volume}
 
   add_to_docker_group:
     type: "OS::Heat::SoftwareConfig"
     properties:
       group: ungrouped
       config: {get_file: fragments/add-to-docker-group.sh}
-
-  configure_docker_storage:
-    type: "OS::Heat::SoftwareConfig"
-    properties:
-      group: ungrouped
-      config: {get_file: fragments/configure-docker-storage.sh}
 
   configure_kubernetes_minion:
     type: "OS::Heat::SoftwareConfig"
@@ -162,7 +145,6 @@ resources:
         - config: {get_resource: kube_user}
         - config: {get_resource: kube_examples}
         - config: {get_resource: add_to_docker_group}
-        - config: {get_resource: configure_docker_storage}
         - config: {get_resource: configure_kubernetes_minion}
         - config: {get_resource: docker_service}
         - config: {get_resource: enable_services}
@@ -180,20 +162,7 @@ resources:
       user_data_format: RAW
       user_data: {get_resource: kube_node_init}
       networks:
-        - port:
-            get_resource: kube_node_eth0
-
-  kube_node_eth0:
-    type: "OS::Neutron::Port"
-    properties:
-      network_id:
-        get_param: fixed_network_id
-      security_groups:
-        - get_resource: secgroup_all_open
-      fixed_ips:
-        - subnet_id:
-            get_param: fixed_subnet_id
-      replacement_policy: AUTO
+        - network: {get_param: fixed_network}
 
   kube_node_floating:
     type: "OS::Neutron::FloatingIP"
@@ -201,23 +170,12 @@ resources:
       floating_network_id:
         get_param: external_network_id
       port_id:
-        get_resource: kube_node_eth0
-
-  docker_volume:
-    type: "OS::Cinder::Volume"
-    properties:
-      size: {get_param: docker_volume_size}
-
-  docker_volume_attach:
-    type: "OS::Cinder::VolumeAttachment"
-    properties:
-      instance_uuid: {get_resource: kube_node}
-      volume_id: {get_resource: docker_volume}
+        get_attr: [kube_node, addresses, {get_param: fixed_network}, 0, port]
 
 outputs:
 
   kube_node_ip:
-    value: {get_attr: [kube_node_eth0, fixed_ips, 0, ip_address]}
+    value: {get_attr: [kube_node, networks, private, 0]}
   
   kube_node_external_ip:
     value: {get_attr: [kube_node_floating, floating_ip_address]}
